[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/enemies/Monsier_Frog/MonsieurFroggo.gd" type="Script" id=1]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/Attack.gd" type="Script" id=2]
[ext_resource path="res://worlds/world2/RayCast2D.gd" type="Script" id=3]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/Jump.gd" type="Script" id=4]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/AngryFace.gd" type="Script" id=5]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/Anticipate.gd" type="Script" id=6]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/DevourPlayer.gd" type="Script" id=7]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/TakingDamage.gd" type="Script" id=8]
[ext_resource path="res://shaders_and_materials/effects/ExplosionParticles.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/StartSequenceStart.gd" type="Script" id=10]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/Dying.gd" type="Script" id=11]
[ext_resource path="res://art/enemies/Monsier_Frog/states/Froggo/StartSequenceBattle.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Glow"
tracks/0/type = "value"
tracks/0/path = NodePath("anim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/Monsieur_froggo.png-62adffdc02df525aa077683129f556c3.stex"

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/Monsieur_froggo_openmouth.png-2d06e79268903fe44906a9f3392afc00.stex"

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "open_mouth",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.752, 14.0288 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25.7563, 17.7593 )

[node name="Monsieur_froggo" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 529
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Glow = SubResource( 1 )
anims/StartSequenceBattle = SubResource( 2 )

[node name="Tongue" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
z_index = 3
cast_to = Vector2( -100, 0 )
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="Tongue"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
default_color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Tongue"]

[node name="States" type="Node" parent="."]

[node name="StartSequenceBattle" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="StartSequenceStart" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="AngryFace" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Anticipate" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="TakingDamage" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="TongueAttack" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="DevourPlayer" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Dying" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="anim" type="AnimatedSprite" parent="."]
z_index = 5
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.05948, 5.2973 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.16695, 7.44042 )
shape = SubResource( 5 )

[node name="Particles2D" parent="." instance=ExtResource( 9 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="hit_player" from="Tongue" to="." method="_on_Tongue_hit_player"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
